added warning supression

--- a/Wk10DocumentClassification/HamSpam.ipynb
+++ b/Wk10DocumentClassification/HamSpam.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ham Vs Spam\n",
+    "# Document Classification\n",
+    "\n",
+    "## Ham Vs Spam\n",
     "\n",
     "### Abdelmalek Hajjam / Monu Chacko"
    ]
@@ -25,6 +27,11 @@
     "import nltk\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import sklearn\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
     "# Read data from file\n",
@@ -646,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -794,19 +801,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\moc9029\\Anaconda\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make splits\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "#from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "trainSet, testSet = train_test_split(shdata, test_size=testNum, random_state=8)\n",
     "trainSet, valSet = train_test_split(trainSet, test_size=valNum, random_state=88)"
@@ -914,12 +913,14 @@
       "False positives: 0\n",
       "True negatives: 1958\n",
       "False negatives: 2\n",
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "       Spam       1.00      1.00      1.00      1262\n",
-      "   Not spam       1.00      1.00      1.00      1958\n",
+      "        Spam       1.00      1.00      1.00      1262\n",
+      "    Not spam       1.00      1.00      1.00      1958\n",
       "\n",
-      "avg / total       1.00      1.00      1.00      3220\n",
+      "    accuracy                           1.00      3220\n",
+      "   macro avg       1.00      1.00      1.00      3220\n",
+      "weighted avg       1.00      1.00      1.00      3220\n",
       "\n"
      ]
     }
@@ -938,7 +939,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19d0fe5e358>"
+       "<matplotlib.image.AxesImage at 0x1637cb30>"
       ]
      },
      "execution_count": 15,
@@ -977,12 +978,14 @@
       "False positives: 17\n",
       "True negatives: 401\n",
       "False negatives: 20\n",
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "       Spam       0.94      0.93      0.93       272\n",
-      "   Not spam       0.95      0.96      0.96       418\n",
+      "        Spam       0.94      0.93      0.93       272\n",
+      "    Not spam       0.95      0.96      0.96       418\n",
       "\n",
-      "avg / total       0.95      0.95      0.95       690\n",
+      "    accuracy                           0.95       690\n",
+      "   macro avg       0.94      0.94      0.94       690\n",
+      "weighted avg       0.95      0.95      0.95       690\n",
       "\n"
      ]
     }
@@ -1004,7 +1007,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19d0feccf60>"
+       "<matplotlib.image.AxesImage at 0x163d8730>"
       ]
      },
      "execution_count": 17,
@@ -1043,12 +1046,14 @@
       "False positives: 29\n",
       "True negatives: 383\n",
       "False negatives: 28\n",
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "       Spam       0.90      0.90      0.90       279\n",
-      "   Not spam       0.93      0.93      0.93       412\n",
+      "        Spam       0.90      0.90      0.90       279\n",
+      "    Not spam       0.93      0.93      0.93       412\n",
       "\n",
-      "avg / total       0.92      0.92      0.92       691\n",
+      "    accuracy                           0.92       691\n",
+      "   macro avg       0.91      0.91      0.91       691\n",
+      "weighted avg       0.92      0.92      0.92       691\n",
       "\n"
      ]
     }
@@ -1070,7 +1075,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19d0ff15ac8>"
+       "<matplotlib.image.AxesImage at 0x16409290>"
       ]
      },
      "execution_count": 19,
@@ -1227,14 +1232,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\moc9029\\Anaconda\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1242,13 +1239,23 @@
       "False positives: 3\n",
       "True negatives: 1955\n",
       "False negatives: 14\n",
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "       Spam       1.00      0.99      0.99      1262\n",
-      "   Not spam       0.99      1.00      1.00      1958\n",
+      "        Spam       1.00      0.99      0.99      1262\n",
+      "    Not spam       0.99      1.00      1.00      1958\n",
       "\n",
-      "avg / total       0.99      0.99      0.99      3220\n",
+      "    accuracy                           0.99      3220\n",
+      "   macro avg       1.00      0.99      0.99      3220\n",
+      "weighted avg       0.99      0.99      0.99      3220\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\abh9013\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
      ]
     }
    ],
@@ -1271,7 +1278,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19d0fff5c18>"
+       "<matplotlib.image.AxesImage at 0x164f5e50>"
       ]
      },
      "execution_count": 22,
@@ -1310,12 +1317,14 @@
       "False positives: 16\n",
       "True negatives: 396\n",
       "False negatives: 31\n",
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "       Spam       0.94      0.89      0.91       279\n",
-      "   Not spam       0.93      0.96      0.94       412\n",
+      "        Spam       0.94      0.89      0.91       279\n",
+      "    Not spam       0.93      0.96      0.94       412\n",
       "\n",
-      "avg / total       0.93      0.93      0.93       691\n",
+      "    accuracy                           0.93       691\n",
+      "   macro avg       0.93      0.93      0.93       691\n",
+      "weighted avg       0.93      0.93      0.93       691\n",
       "\n"
      ]
     }
@@ -1334,7 +1343,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19d1003e3c8>"
+       "<matplotlib.image.AxesImage at 0x16525310>"
       ]
      },
      "execution_count": 24,
@@ -1484,6 +1493,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\abh9013\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1491,12 +1508,14 @@
       "False positives: 52\n",
       "True negatives: 1906\n",
       "False negatives: 136\n",
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "       Spam       0.96      0.89      0.92      1262\n",
-      "   Not spam       0.93      0.97      0.95      1958\n",
+      "        Spam       0.96      0.89      0.92      1262\n",
+      "    Not spam       0.93      0.97      0.95      1958\n",
       "\n",
-      "avg / total       0.94      0.94      0.94      3220\n",
+      "    accuracy                           0.94      3220\n",
+      "   macro avg       0.94      0.93      0.94      3220\n",
+      "weighted avg       0.94      0.94      0.94      3220\n",
       "\n"
      ]
     }
@@ -1520,7 +1539,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19d10081ef0>"
+       "<matplotlib.image.AxesImage at 0x1665ea10>"
       ]
      },
      "execution_count": 27,
@@ -1559,12 +1578,14 @@
       "False positives: 61\n",
       "True negatives: 351\n",
       "False negatives: 65\n",
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "       Spam       0.78      0.77      0.77       279\n",
-      "   Not spam       0.84      0.85      0.85       412\n",
+      "        Spam       0.78      0.77      0.77       279\n",
+      "    Not spam       0.84      0.85      0.85       412\n",
       "\n",
-      "avg / total       0.82      0.82      0.82       691\n",
+      "    accuracy                           0.82       691\n",
+      "   macro avg       0.81      0.81      0.81       691\n",
+      "weighted avg       0.82      0.82      0.82       691\n",
       "\n"
      ]
     }
@@ -1583,7 +1604,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19d100cc940>"
+       "<matplotlib.image.AxesImage at 0x16688f90>"
       ]
      },
      "execution_count": 29,
@@ -1608,6 +1629,13 @@
     "ax = fig.add_subplot(111)\n",
     "ax.matshow(cm)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1639,7 +1667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
