added video link

--- a/Wk10DocumentClassification/HamSpam.ipynb
+++ b/Wk10DocumentClassification/HamSpam.ipynb
@@ -15,7 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This data is taken from http://archive.ics.uci.edu/ml/datasets/Spambase and contains data of spam e-mails coming from postmaster and individuals who had filed spam. This collection of non-spam e-mails came from filed work and personal e-mails, and hence the word 'george' and the area code '650' are indicators of non-spam. These are useful when constructing a personalized spam filter. One would either have to blind such non-spam indicators or get a very wide collection of non-spam to generate a general purpose spam filter. "
+    "This data is taken from http://archive.ics.uci.edu/ml/datasets/Spambase and contains data of spam e-mails coming from postmaster and individuals who had filed spam. This collection of non-spam e-mails came from filed work and personal e-mails, and hence the word 'george' and the area code '650' are indicators of non-spam. These are useful when constructing a personalized spam filter. One would either have to blind such non-spam indicators or get a very wide collection of non-spam to generate a general purpose spam filter. \n",
+    "\n",
+    "Video: https://www.youtube.com/watch?v=-__7h5xffas&feature=youtu.be\n"
    ]
   },
   {
@@ -939,7 +941,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1637cb30>"
+       "<matplotlib.image.AxesImage at 0x165cabd0>"
       ]
      },
      "execution_count": 15,
@@ -1007,7 +1009,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x163d8730>"
+       "<matplotlib.image.AxesImage at 0x16628770>"
       ]
      },
      "execution_count": 17,
@@ -1075,7 +1077,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16409290>"
+       "<matplotlib.image.AxesImage at 0x166552f0>"
       ]
      },
      "execution_count": 19,
@@ -1249,14 +1251,6 @@
       "weighted avg       0.99      0.99      0.99      3220\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\abh9013\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
-     ]
     }
    ],
    "source": [
@@ -1278,7 +1272,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x164f5e50>"
+       "<matplotlib.image.AxesImage at 0x16725e90>"
       ]
      },
      "execution_count": 22,
@@ -1343,7 +1337,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16525310>"
+       "<matplotlib.image.AxesImage at 0x16756370>"
       ]
      },
      "execution_count": 24,
@@ -1493,14 +1487,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\abh9013\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
-      "  \"avoid this warning.\", FutureWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1539,7 +1525,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1665ea10>"
+       "<matplotlib.image.AxesImage at 0x16782a70>"
       ]
      },
      "execution_count": 27,
@@ -1604,7 +1590,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16688f90>"
+       "<matplotlib.image.AxesImage at 0x168a8fb0>"
       ]
      },
      "execution_count": 29,
