--- a/FinalProject/FinalProject.ipynb
+++ b/FinalProject/FinalProject.ipynb
@@ -257,6 +257,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Let's check our Graph options in Gephi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"networkdia1.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Networkdia2.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Now that we have our graph, let's analyze it and reveal some of its properties"
    ]
   },
