--- a/FinalProject/FinalProject.ipynb
+++ b/FinalProject/FinalProject.ipynb
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Networkdia2.png\" />"
+    "<img src=\"networkdia2.png\" />"
    ]
   },
   {
