--- a/FinalProject/FinalProject.ipynb
+++ b/FinalProject/FinalProject.ipynb
@@ -13,6 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Video: https://www.youtube.com/watch?v=f21qGSYVDLU&feature=youtu.be\n",
+    "\n",
     "For the final project we will use the knowledge gained in the class to analyze a dataset of comments for a given discussion. We will Take a discussion thread from reddit and analyze its comments. Reddit is a social news aggregation site, rating contents, and discussions. Registered members submit content to the site such as links, text posts, and images, which are then voted up or down by other members. This network can be analyzed to determine its sentiment and network itself. Kaggle provides us many datasets that are collected from many places. It also includes comments data from reddit. We can use this dataset to do our analysis. Reddit comments dataset https://www.kaggle.com/reddit/reddit-comments-may-2015 contains about 1.7 billion records. To perform analysis, kaggle provides us a smaller subset of data. We took that subset and reduced further to get a new subset of decent csv files that can be read and analyzed. All comments and users used in these 3 CSV files we are going to use, are coming from a single subreddit or subject, in this case it was \"What is the strongest opinion you hold?\".\n",
     "\n",
     "In this project, we will use 2 parts. One part to study the network analysis where the nodes are the users and the edges between any 2 nodes are all the comments and recomments between any 2 users, and the other part to do sentimental analysis on the comments. So let's go!!!"
